<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Chromecast Against Humanity!</string>
    <string name="action_settings">Settings</string>
    <string name="connect">Choose Device</string>
    <string name="device_discover_title">Discovered Devices</string>
    <string name="connected_to_text">Connected to: <b>%s</b></string>
    <string name="no_device">No Device</string>
    <string name="start">Start</string>
    <string name="welcome"><b>Welcome to Chromecast Against Humanity!</b></string>
    <string name="explain1">This is an alpha Crome Cast app that lets players play virtual cards with the help of Chromecast and their android devices.</string>
    <string name="explain2">All credit for this game goes to http://cardsagainsthumanity.com and is remixed under the CC 2.0 license.</string>
    <string name="error">Error</string>
    <string name="leave">Leave</string>
    <string name="ok">OK</string>
    <string name="game_over">Game Over</string>
    <string name="scan_failed_network_error">Unable to scan for devices. Check your network settings.</string>
    <string name="empty"></string>
    <string name="title_activity_game">GameActivity</string>
    <string name="game_placeholder">Game goes here!</string>
    <string name="game_content_holder">Game Content Goes Here!</string>
    <string name="title_card_list">Cards</string>
    <string name="title_card_detail">Card Detail</string>
    <string name="message_text">This is where the messages section should go.</string>
    <string name="bypasstest">Test Game Screen</string>
    <string name="your_awesome_points">Your Awesome Points:</string>
    <string name="back">&lt;</string>
    <string name="next_card">></string>
    <string name="submit_card">Submit</string>
    <string name="get_cards">Get Cards</string>
    <string name="btn_content_next">Next</string>
    <string name="btn_content_back">Back</string>
    <string name="card_dir">Tap the Get Cards button to get your hand.</string>
    <string name="cardPickDefault">pick: 1</string>
    <string name="star_selected">Star - Selected</string>

</resources>
