<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#669999"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GameActivity" >

<LinearLayout 
    android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_weight="5"
          android:orientation="horizontal"
            >
        <TextView
            android:id="@+id/textViewAwesome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_awesome_points"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/awesomePoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceLarge" />
    
</LinearLayout>
    
    	<android.support.v4.view.ViewPager
	    xmlns:android="http://schemas.android.com/apk/res/android"
	    android:id="@+id/pager"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent" />


    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="5" 
        android:theme="@android:style/ButtonBar" >

        <Button
            android:id="@+id/getCards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_cards" 
            style="?android:attr/buttonBarButtonStyle"
            android:drawableLeft="@drawable/cards"
            />
		<Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_card"
            style="?android:attr/buttonBarButtonStyle"
            android:drawableLeft="@drawable/arrow_up" />
		<ImageButton
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back"
            style="?android:attr/buttonBarButtonStyle" 
            android:contentDescription="@string/btn_content_back"/>
        <ImageButton
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:enabled="true"
            android:src="@drawable/next"
            style="?android:attr/buttonBarButtonStyle" 
            android:contentDescription="@string/btn_content_next" />
        
        
    </LinearLayout>
    

</LinearLayout>